Thêm phần xem lịch kiểm tra theo phòng ban và tàu (thiếu cảnh báo)

--- a/WebAuLac/WebAuLac.csproj
+++ b/WebAuLac/WebAuLac.csproj
@@ -1323,6 +1323,7 @@
     <Content Include="Views\LichKiemTraTaus\locChucDanh.cshtml" />
     <Content Include="Views\LichKiemTraTaus\DanhSachDieuDong.cshtml" />
     <Content Include="Views\LichKiemTraTaus\dsDuTru.cshtml" />
+    <Content Include="Views\LichKiemTras\LichTheoPhongBan.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
